updated all examples to use BMEG release rc5

--- a/CCLE_T-Test.ipynb
+++ b/CCLE_T-Test.ipynb
@@ -9,11 +9,12 @@
     "path: CCLE/t-test\n",
     "authors:\n",
     "- kellrott\n",
+    "- adamstruck\n",
     "tags:\n",
     "- ccle\n",
     "- drug response\n",
     "created_at: 2018-05-09\n",
-    "updated_at: 2018-05-09\n",
+    "updated_at: 2020-01-14\n",
     "tldr: Identify drug response seperation for CCLE cohorts defined by gene mutation\n",
     "---"
    ]
@@ -30,7 +31,7 @@
     "import scipy.stats as stats\n",
     "\n",
     "conn = gripql.Connection(\"https://bmeg.io/api\", credential_file=\"bmeg_credentials.json\")\n",
-    "O = conn.graph(\"bmeg_rc2\")"
+    "G = conn.graph(\"rc5\")"
    ]
   },
   {
@@ -42,19 +43,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-07-26 20:29:14,278\t40 results received in 0 seconds\n"
+      "[INFO]\t2020-01-14 13:36:52,216\t40 results received in 0 seconds\n"
      ]
     }
    ],
    "source": [
-    "q = O.query().V(\"Project:CTRP_Breast_Cancer\").out(\"cases\").distinct(\"_gid\")\n",
+    "q = G.query().V(\"Program:CTRP\").out(\"projects\").out(\"cases\").\\\n",
+    "    has(gripql.eq(\"cellline_attributes.Primary Disease\", \"Breast Cancer\")).distinct()\n",
     "all_cases = []\n",
     "for row in q:\n",
     "    all_cases.append(row.gid)"
@@ -69,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,20 +80,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-07-26 20:29:14,423\t2 results received in 0 seconds\n"
+      "[INFO]\t2020-01-14 13:36:56,003\t2 results received in 0 seconds\n"
      ]
     }
    ],
    "source": [
     "gene_ids = {}\n",
-    "for i in O.query().V().hasLabel(\"Gene\").has(gripql.within(\"symbol\", GENES)):\n",
+    "for i in G.query().V().hasLabel(\"Gene\").has(gripql.within(\"symbol\", GENES)):\n",
     "    gene_ids[i.data.symbol] = i.gid"
    ]
   },
@@ -104,16 +106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'PTEN': 'ENSG00000171862', 'TP53': 'ENSG00000141510'}"
+       "{'TP53': 'ENSG00000141510', 'PTEN': 'ENSG00000171862'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,24 +133,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-07-26 20:29:14,690\t43 results received in 0 seconds\n"
+      "[INFO]\t2020-01-14 13:39:36,629\t43 results received in 0 seconds\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ENSG00000171862 Positive Set: 9\n",
-      "ENSG00000171862 Negative Set: 31\n",
       "ENSG00000141510 Positive Set: 29\n",
-      "ENSG00000141510 Negative Set: 11\n"
+      "ENSG00000141510 Negative Set: 11\n",
+      "ENSG00000171862 Positive Set: 9\n",
+      "ENSG00000171862 Negative Set: 31\n"
      ]
     }
    ],
@@ -156,7 +158,7 @@
     "mut_cases = {}\n",
     "norm_cases = {}\n",
     "\n",
-    "q = O.query().V(all_cases).as_(\"ctrp\").out(\"same_as\").has(gripql.eq(\"project_id\", \"Project:CCLE_Breast_Cancer\"))\n",
+    "q = G.query().V(all_cases).as_(\"ctrp\").out(\"same_as\").has(gripql.eq(\"project_id\", \"Project:CCLE\"))\n",
     "q = q.out(\"samples\").out(\"aliquots\").out(\"somatic_callsets\")\n",
     "q = q.outE(\"alleles\").has(gripql.within(\"ensembl_gene\", list(gene_ids.values())))\n",
     "q = q.render({\"case\" : \"$ctrp._gid\", \"gene\" : \"$._data.ensembl_gene\"})\n",
@@ -174,15 +176,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-07-26 20:29:16,035\t3,592 results received in 1 seconds\n",
-      "[INFO]\t2019-07-26 20:29:19,540\t12,224 results received in 3 seconds\n"
+      "[INFO]\t2020-01-14 13:39:55,140\t12,224 results received in 3 seconds\n",
+      "[INFO]\t2020-01-14 13:39:56,594\t3,999 results received in 1 seconds\n"
      ]
     }
    ],
@@ -190,11 +192,11 @@
     "pos_response = {}\n",
     "for g in gene_ids.values():\n",
     "    pos_response[g] = {}\n",
-    "    q = O.query().V(list(mut_cases[g])).as_(\"a\").out(\"samples\").out(\"aliquots\")\n",
+    "    q = G.query().V(list(mut_cases[g])).as_(\"a\").out(\"samples\").out(\"aliquots\")\n",
     "    q = q.out(\"drug_response\").as_(\"a\").out(\"compounds\").as_(\"b\")\n",
     "    q = q.select([\"a\", \"b\"])    \n",
     "    for row in q:\n",
-    "        v = row['a']['data']['auc']\n",
+    "        v = row['a']['data']['aac']\n",
     "        compound = row['b']['gid']\n",
     "        if compound not in pos_response[g]:\n",
     "            pos_response[g][compound] = [ v ]\n",
@@ -205,15 +207,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-07-26 20:29:23,489\t13,250 results received in 3 seconds\n",
-      "[INFO]\t2019-07-26 20:29:25,137\t4,618 results received in 1 seconds\n"
+      "[INFO]\t2020-01-14 13:39:59,162\t5,025 results received in 1 seconds\n",
+      "[INFO]\t2020-01-14 13:40:03,457\t13,250 results received in 4 seconds\n"
      ]
     }
    ],
@@ -221,11 +223,11 @@
     "neg_response = {}\n",
     "for g in gene_ids.values():\n",
     "    neg_response[g] = {}\n",
-    "    q = O.query().V(list(norm_cases[g])).as_(\"a\").out(\"samples\").out(\"aliquots\")\n",
+    "    q = G.query().V(list(norm_cases[g])).as_(\"a\").out(\"samples\").out(\"aliquots\")\n",
     "    q = q.out(\"drug_response\").as_(\"a\").out(\"compounds\").as_(\"b\")\n",
     "    q = q.select([\"a\", \"b\"])    \n",
     "    for row in q:\n",
-    "        v = row['a']['data']['auc']\n",
+    "        v = row['a']['data']['aac']\n",
     "        compound = row['b']['gid']\n",
     "        if compound not in neg_response[g]:\n",
     "            neg_response[g][compound] = [ v ]\n",
@@ -236,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -294,126 +296,126 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>369</th>\n",
+       "      <td>277</td>\n",
+       "      <td>Compound:CID216345</td>\n",
+       "      <td>ENSG00000141510</td>\n",
+       "      <td>-4.425335</td>\n",
+       "      <td>0.000366</td>\n",
+       "      <td>23.811104</td>\n",
+       "      <td>0.000019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>593</td>\n",
+       "      <td>Compound:CID16736978</td>\n",
+       "      <td>ENSG00000141510</td>\n",
+       "      <td>-3.177435</td>\n",
+       "      <td>0.006779</td>\n",
+       "      <td>12.249536</td>\n",
+       "      <td>0.001356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>214</td>\n",
        "      <td>Compound:CID9967941</td>\n",
        "      <td>ENSG00000141510</td>\n",
-       "      <td>4.098840</td>\n",
-       "      <td>0.000438</td>\n",
-       "      <td>12.705330</td>\n",
-       "      <td>0.001136</td>\n",
+       "      <td>-3.114875</td>\n",
+       "      <td>0.006419</td>\n",
+       "      <td>11.046079</td>\n",
+       "      <td>0.002136</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>136</th>\n",
-       "      <td>Compound:CID11433190</td>\n",
+       "      <td>31</td>\n",
+       "      <td>Compound:CID9549297</td>\n",
        "      <td>ENSG00000141510</td>\n",
-       "      <td>2.941631</td>\n",
-       "      <td>0.011004</td>\n",
-       "      <td>12.336689</td>\n",
-       "      <td>0.001189</td>\n",
+       "      <td>-2.573574</td>\n",
+       "      <td>0.021992</td>\n",
+       "      <td>10.077463</td>\n",
+       "      <td>0.003071</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>315</th>\n",
+       "      <td>480</td>\n",
        "      <td>Compound:CID56949517</td>\n",
        "      <td>ENSG00000171862</td>\n",
-       "      <td>-2.611946</td>\n",
-       "      <td>0.041333</td>\n",
-       "      <td>13.650130</td>\n",
-       "      <td>0.001197</td>\n",
+       "      <td>2.235155</td>\n",
+       "      <td>0.069114</td>\n",
+       "      <td>10.480699</td>\n",
+       "      <td>0.003638</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>191</th>\n",
-       "      <td>Compound:CID11152667</td>\n",
+       "      <td>808</td>\n",
+       "      <td>Compound:CID5472285</td>\n",
        "      <td>ENSG00000141510</td>\n",
-       "      <td>-3.003887</td>\n",
-       "      <td>0.008382</td>\n",
-       "      <td>9.205017</td>\n",
-       "      <td>0.004602</td>\n",
+       "      <td>-2.711139</td>\n",
+       "      <td>0.015176</td>\n",
+       "      <td>9.369077</td>\n",
+       "      <td>0.004037</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>Compound:NO_ONTOLOGY~BRD-K97651142</td>\n",
+       "      <td>566</td>\n",
+       "      <td>Compound:NO_ONTOLOGY:CID9809715</td>\n",
        "      <td>ENSG00000141510</td>\n",
-       "      <td>2.556805</td>\n",
-       "      <td>0.023745</td>\n",
-       "      <td>8.381266</td>\n",
-       "      <td>0.006489</td>\n",
+       "      <td>-2.492241</td>\n",
+       "      <td>0.026354</td>\n",
+       "      <td>8.810857</td>\n",
+       "      <td>0.005631</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>44</th>\n",
+       "      <td>237</td>\n",
+       "      <td>Compound:CID451668</td>\n",
+       "      <td>ENSG00000171862</td>\n",
+       "      <td>2.030714</td>\n",
+       "      <td>0.051533</td>\n",
+       "      <td>7.157550</td>\n",
+       "      <td>0.008627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>95</td>\n",
+       "      <td>Compound:CID54686904</td>\n",
+       "      <td>ENSG00000171862</td>\n",
+       "      <td>2.241852</td>\n",
+       "      <td>0.067998</td>\n",
+       "      <td>8.668157</td>\n",
+       "      <td>0.009525</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>656</td>\n",
        "      <td>Compound:CID11609586</td>\n",
        "      <td>ENSG00000171862</td>\n",
-       "      <td>-1.952776</td>\n",
-       "      <td>0.068235</td>\n",
-       "      <td>7.382291</td>\n",
-       "      <td>0.008403</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>649</th>\n",
-       "      <td>Compound:CID52947560</td>\n",
-       "      <td>ENSG00000141510</td>\n",
-       "      <td>2.319721</td>\n",
-       "      <td>0.036225</td>\n",
-       "      <td>7.511026</td>\n",
-       "      <td>0.009386</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>682</th>\n",
-       "      <td>Compound:CID46943432</td>\n",
-       "      <td>ENSG00000171862</td>\n",
-       "      <td>-2.160075</td>\n",
-       "      <td>0.055895</td>\n",
-       "      <td>7.443883</td>\n",
-       "      <td>0.009680</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>538</th>\n",
-       "      <td>Compound:CID5566</td>\n",
-       "      <td>ENSG00000141510</td>\n",
-       "      <td>1.736441</td>\n",
-       "      <td>0.118978</td>\n",
-       "      <td>7.362028</td>\n",
-       "      <td>0.010777</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>377</th>\n",
-       "      <td>Compound:CID31703</td>\n",
-       "      <td>ENSG00000171862</td>\n",
-       "      <td>-2.835380</td>\n",
-       "      <td>0.009463</td>\n",
-       "      <td>6.628285</td>\n",
-       "      <td>0.012186</td>\n",
+       "      <td>1.948182</td>\n",
+       "      <td>0.066221</td>\n",
+       "      <td>6.818910</td>\n",
+       "      <td>0.011089</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                   drug         mutation  t-statistic  \\\n",
-       "369                 Compound:CID9967941  ENSG00000141510     4.098840   \n",
-       "136                Compound:CID11433190  ENSG00000141510     2.941631   \n",
-       "315                Compound:CID56949517  ENSG00000171862    -2.611946   \n",
-       "191                Compound:CID11152667  ENSG00000141510    -3.003887   \n",
-       "41   Compound:NO_ONTOLOGY~BRD-K97651142  ENSG00000141510     2.556805   \n",
-       "44                 Compound:CID11609586  ENSG00000171862    -1.952776   \n",
-       "649                Compound:CID52947560  ENSG00000141510     2.319721   \n",
-       "682                Compound:CID46943432  ENSG00000171862    -2.160075   \n",
-       "538                    Compound:CID5566  ENSG00000141510     1.736441   \n",
-       "377                   Compound:CID31703  ENSG00000171862    -2.835380   \n",
+       "                                drug         mutation  t-statistic  t-pvalue  \\\n",
+       "277               Compound:CID216345  ENSG00000141510    -4.425335  0.000366   \n",
+       "593             Compound:CID16736978  ENSG00000141510    -3.177435  0.006779   \n",
+       "214              Compound:CID9967941  ENSG00000141510    -3.114875  0.006419   \n",
+       "31               Compound:CID9549297  ENSG00000141510    -2.573574  0.021992   \n",
+       "480             Compound:CID56949517  ENSG00000171862     2.235155  0.069114   \n",
+       "808              Compound:CID5472285  ENSG00000141510    -2.711139  0.015176   \n",
+       "566  Compound:NO_ONTOLOGY:CID9809715  ENSG00000141510    -2.492241  0.026354   \n",
+       "237               Compound:CID451668  ENSG00000171862     2.030714  0.051533   \n",
+       "95              Compound:CID54686904  ENSG00000171862     2.241852  0.067998   \n",
+       "656             Compound:CID11609586  ENSG00000171862     1.948182  0.066221   \n",
        "\n",
-       "     t-pvalue  a-statistic  a-pvalue  \n",
-       "369  0.000438    12.705330  0.001136  \n",
-       "136  0.011004    12.336689  0.001189  \n",
-       "315  0.041333    13.650130  0.001197  \n",
-       "191  0.008382     9.205017  0.004602  \n",
-       "41   0.023745     8.381266  0.006489  \n",
-       "44   0.068235     7.382291  0.008403  \n",
-       "649  0.036225     7.511026  0.009386  \n",
-       "682  0.055895     7.443883  0.009680  \n",
-       "538  0.118978     7.362028  0.010777  \n",
-       "377  0.009463     6.628285  0.012186  "
+       "     a-statistic  a-pvalue  \n",
+       "277    23.811104  0.000019  \n",
+       "593    12.249536  0.001356  \n",
+       "214    11.046079  0.002136  \n",
+       "31     10.077463  0.003071  \n",
+       "480    10.480699  0.003638  \n",
+       "808     9.369077  0.004037  \n",
+       "566     8.810857  0.005631  \n",
+       "237     7.157550  0.008627  \n",
+       "95      8.668157  0.009525  \n",
+       "656     6.818910  0.011089  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
