--- a/DrugList.ipynb
+++ b/DrugList.ipynb
@@ -9,208 +9,125 @@
     "draft: True\n",
     "authors:\n",
     "- kellrott\n",
+    "- adamstruck\n",
     "tags:\n",
     "- ccle\n",
     "- drug response\n",
     "created_at: 2018-05-09\n",
-    "updated_at: 2018-05-09\n",
+    "updated_at: 2020-01-14\n",
     "tldr: Get info about CCLE drug response experiments\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "import gripql\n",
-    "conn = gripql.Connection(\"https://bmegio.ohsu.edu/api\", credential_file=\"bmeg_credentials.json\")\n",
-    "O = conn.graph(\"bmeg_rc2\")"
+    "\n",
+    "conn = gripql.Connection(\"https://bmeg.io/api\", credential_file=\"bmeg_credentials.json\")\n",
+    "G = conn.graph(\"rc5\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-07-26 18:24:25,627\t5 results received in 0 seconds\n"
+      "[INFO]\t2020-01-14 14:00:13,305\t11,670 results received in 4 seconds\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "responses = G.query().V(\"Program:CCLE\").out(\"projects\").out(\"cases\").out(\"samples\").\\\n",
+    "    out(\"aliquots\").as_(\"aliquot\").\\\n",
+    "    out(\"drug_response\").as_(\"resp\").\\\n",
+    "    out(\"compounds\").as_(\"compound\").\\\n",
+    "    render({\"aliquot_id\": \"$aliquot._gid\",\n",
+    "            \"compound_id\": \"$compound._gid\",\n",
+    "            \"compound\": \"$compound._data\",\n",
+    "            \"drug_response_id\": \"$resp._gid\", \n",
+    "            \"drug_response\": \"$resp._data\"}).\\\n",
+    "    execute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<AttrDict({'approved_countries': [], 'chebi_id': 'CHEBI:91338', 'chembl_id': 'CHEMBL509032', 'id_source': 'PUBCHEM', 'inchi': 'InChI=1S/C30H40ClN7O3S/c1-21(2)42(39,40)28-8-6-5-7-26(28)33-29-24(31)20-32-30(35-29)34-25-10-9-23(19-27(25)41-4)37-13-11-22(12-14-37)38-17-15-36(3)16-18-38/h5-10,19-22H,11-18H2,1-4H3,(H2,32,33,34,35)', 'inchi_key': 'QQWUGDVOUVUTOY-UHFFFAOYSA-N', 'project_id': 'Project:Reference', 'pubchem_id': 'CID16038120', 'source_url': 'http://mychem.info/v1/query?q=pubchem.cid:\"16038120\"&fields=chebi.id,chebi.inchi,chebi.inchi_key,chebi.name,chembl.molecule_chembl_id,chembl.pref_name,chembl.inchi,chembl.inchi_key,chembl.molecule_synonyms,chembl.usan_stem_definition,pubchem.cid,pubchem.inchi,pubchem.inchi_key,drugbank.id,drugbank.inchi,drugbank.inchi_key,drugbank.products.approved,drugbank.products.country,drugbank.taxonomy.class,drugbank.taxonomy.direct-parent,drugbank.taxonomy.kingdom,drugbank.taxonomy.subclass,drugbank.taxonomy.superclass,drugbank.taxonomy.description&size=1', 'submitter_id': 'CHEMBL509032', 'synonym': '16038120'})>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<AttrDict({'gid': 'Sample:CCLE:ACH-000511', 'label': 'Sample', 'data': {'project_id': 'Project:CCLE_Lung_Cancer', 'sample_id': 'ACH-000511', 'submitter_id': 'CALU1_LUNG'}})>, <AttrDict({'gid': 'Sample:CCLE:ACH-001306', 'label': 'Sample', 'data': {'project_id': 'Project:CCLE_Thyroid_Cancer', 'sample_id': 'ACH-001306', 'submitter_id': '8305C_THYROID'}})>, <AttrDict({'gid': 'Sample:CCLE:ACH-000046', 'label': 'Sample', 'data': {'project_id': 'Project:CCLE_Kidney_Cancer', 'sample_id': 'ACH-000046', 'submitter_id': 'ACHN_KIDNEY'}})>, <AttrDict({'gid': 'Sample:CCLE:ACH-001041', 'label': 'Sample', 'data': {'project_id': 'Project:CCLE_Lung_Cancer', 'sample_id': 'ACH-001041', 'submitter_id': 'COLO699_LUNG'}})>, <AttrDict({'gid': 'Sample:CCLE:ACH-001039', 'label': 'Sample', 'data': {'project_id': 'Project:CCLE_Colon/Colorectal_Cancer', 'sample_id': 'ACH-001039', 'submitter_id': 'COLO205_LARGE_INTESTINE'}})>]\n"
+      "# compounds: 24\n",
+      "# cell lines: 504\n"
      ]
     }
    ],
    "source": [
-    "print( list(O.query().V().hasLabel(\"Sample\").limit(5) ))"
+    "c = set()\n",
+    "a = set()\n",
+    "for resp in responses:\n",
+    "    c.add(resp.compound_id)\n",
+    "    a.add(resp.aliquot_id)\n",
+    "    \n",
+    "print(\"# compounds:\",len(c))\n",
+    "print(\"# cell lines:\",len(a))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-07-26 18:24:27,023\t16,521 results received in 1 seconds\n"
+      "{\n",
+      "  \"approved_countries\": [],\n",
+      "  \"chebi_id\": \"CHEBI:91338\",\n",
+      "  \"chembl_id\": \"CHEMBL509032\",\n",
+      "  \"id_source\": \"PUBCHEM\",\n",
+      "  \"inchi\": \"InChI=1S/C30H40ClN7O3S/c1-21(2)42(39,40)28-8-6-5-7-26(28)33-29-24(31)20-32-30(35-29)34-25-10-9-23(19-27(25)41-4)37-13-11-22(12-14-37)38-17-15-36(3)16-18-38/h5-10,19-22H,11-18H2,1-4H3,(H2,32,33,34,35)\",\n",
+      "  \"inchi_key\": \"QQWUGDVOUVUTOY-UHFFFAOYSA-N\",\n",
+      "  \"project_id\": \"Project:Reference\",\n",
+      "  \"pubchem_id\": \"CID16038120\",\n",
+      "  \"source_url\": \"http://mychem.info/v1/query?q=pubchem.cid:\\\"16038120\\\"&fields=chebi.id,chebi.inchi,chebi.inchi_key,chebi.name,chembl.molecule_chembl_id,chembl.pref_name,chembl.inchi,chembl.inchi_key,chembl.molecule_synonyms,chembl.usan_stem_definition,pubchem.cid,pubchem.inchi,pubchem.inchi_key,drugbank.id,drugbank.inchi,drugbank.inchi_key,drugbank.products.approved,drugbank.products.country,drugbank.taxonomy.class,drugbank.taxonomy.direct-parent,drugbank.taxonomy.kingdom,drugbank.taxonomy.subclass,drugbank.taxonomy.superclass,drugbank.taxonomy.description&size=1\",\n",
+      "  \"submitter_id\": \"CHEMBL509032\",\n",
+      "  \"synonym\": \"16038120\"\n",
+      "}\n"
      ]
     }
    ],
    "source": [
-    "aliquots = list(O.query().V(\"Program:CCLE\").out(\"projects\").out(\"cases\").out(\"samples\").out(\"aliquots\").render(\"$._gid\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Query' object has no attribute 'where'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-1c1f88e51aea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mq\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mO\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mV\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhasLabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Sample\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maql\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meq\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"datasetId\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"ccle\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmark\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"s\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0min_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"responseFor\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmark\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"responseTo\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmark\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"d\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mrender\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"$s._gid\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"$r.summary\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"$d._gid\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlimit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mq\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Query' object has no attribute 'where'"
-     ]
-    }
-   ],
-   "source": [
-    "q = O.query().V().hasLabel(\"Sample\").where(aql.eq(\"datasetId\", \"ccle\")).mark(\"s\")\\\n",
-    ".in_(\"responseFor\").mark(\"r\").out(\"responseTo\").mark(\"d\")\\\n",
-    ".render([\"$s._gid\", \"$r.summary\", \"$d._gid\"]).limit(10)\n",
-    "for row in q:\n",
-    "    print(row)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q = O.query().V().where(aql.eq(\"_label\", \"Biosample\")).where(aql.eq(\"datasetId\", \"ccle\")).mark(\"s\")\\\n",
-    ".in_(\"responseFor\").mark(\"r\").outEdge(\"responseTo\").distinct(\"_to\").render([\"_to\"])\n",
-    "for row in q:\n",
-    "    print row"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q = O.query().V().where(aql.eq(\"_label\", \"ResponseCurve\")).outEdge(\"responseTo\").distinct(\"_to\").render([\"_to\"])\n",
-    "for row in q:\n",
-    "    print row"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print list(O.query().V().where(aql.eq(\"_label\", \"ResponseCurve\")).outEdge(\"responseTo\").distinct(\"_to\").render([\"_to\"]).count())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print list(O.query().V().where(aql.eq(\"_label\", \"G2PAssociation\")).outEdge(\"environmentFor\").distinct(\"_to\").render([\"_to\"]))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print list(O.query().V().where(aql.eq(\"_label\", \"G2PAssociation\")).outEdge().limit(100).render([\"_label\"]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print list(O.query().V().where(aql.eq(\"$.label\", \"Individual\")).outEdge(\"drugTherapyFrom\").distinct(\"$.to\").render([\"$.to\"]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q = O.query().V().where(aql.eq(\"_label\", \"Compound\"))\n",
-    "for i in q:\n",
-    "    print i"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q = O.query().V(\"compound:UNKNOWN:oxaliplatin\").inEdge().distinct(\"_label\").render([\"_label\"])\n",
-    "print list(q)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q =  O.query().V(\"compound:UNKNOWN:oxaliplatin\").inEdge(\"sameAs\")\n",
-    "print list(q)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print list(O.query().V(\"compound:UNKNOWN:BRD-M14820059\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q = O.query().V().where(aql.eq(\"_label\", \"ResponseCurve\")).aggregate(aql.term(\"test\", \"ResponseCurve\", \"source\"))\n",
-    "print list(q)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print O.aggregate(aql.term(\"test\", \"ResponseCurve\", \"responseType\"))"
+    "print(json.dumps(responses[1].compound.to_dict(), indent=2))"
    ]
   },
   {
@@ -237,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
