--- a/TCGA_Counts.ipynb
+++ b/TCGA_Counts.ipynb
@@ -9,24 +9,25 @@
     "weight: 40\n",
     "authors:\n",
     "- kellrott\n",
+    "- adamstruck\n",
     "tags:\n",
     "- ccle\n",
     "- drug response\n",
     "created_at: 2018-05-09\n",
-    "updated_at: 2018-05-09\n",
+    "updated_at: 2020-01-14\n",
     "tldr: Use aggregation methods to count number of samples in a program\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gripql\n",
     "conn = gripql.Connection(\"https://bmeg.io/api\", credential_file=\"bmeg_credentials.json\")\n",
-    "O = conn.graph(\"bmeg_rc2\")"
+    "G = conn.graph(\"rc5\")"
    ]
   },
   {
@@ -38,40 +39,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-07-26 18:01:50,332\t1 results received in 0 seconds\n"
+      "[INFO]\t2020-01-14 14:25:03,363\t1 results received in 0 seconds\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Program:CCLE\t37\n",
       "Program:TCGA\t33\n",
       "Program:GTEx\t31\n",
-      "Program:GDSC\t31\n",
-      "Program:CTRP\t30\n",
-      "Program:TARGET\t7\n",
-      "Program:CPTAC\t1\n",
-      "Program:FM\t1\n",
-      "Program:NCICCR\t1\n",
-      "Program:CTSP\t1\n",
-      "Program:HCMI\t1\n",
-      "Program:BEATAML1.0\t1\n",
-      "Program:VAREPOP\t1\n"
+      "Program:CCLE\t1\n",
+      "Program:GDSC\t1\n",
+      "Program:CTRP\t1\n"
      ]
     }
    ],
    "source": [
-    "q = O.query().V().hasLabel(\"Program\").as_(\"p\").out(\"projects\").select(\"p\")\n",
+    "q = G.query().V().hasLabel(\"Program\").as_(\"p\").out(\"projects\").select(\"p\")\n",
     "q = q.aggregate(gripql.term(\"project_count\", \"$._gid\"))\n",
     "for row in q.execute()[0][\"project_count\"][\"buckets\"]:\n",
+    "    print(\"%s\\t%s\" % (row[\"key\"], row[\"value\"]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Count number of Cases per Program"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO]\t2020-01-14 14:25:23,826\t1 results received in 1 seconds\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Program:TCGA\t11315\n",
+      "Program:GTEx\t8859\n",
+      "Program:CCLE\t1618\n",
+      "Program:GDSC\t1075\n",
+      "Program:CTRP\t887\n"
+     ]
+    }
+   ],
+   "source": [
+    "q = G.query().V().hasLabel(\"Program\").as_(\"p\").out(\"projects\").out(\"cases\").select(\"p\")\n",
+    "q = q.aggregate(gripql.term(\"sample_count\", \"$._gid\"))\n",
+    "for row in q.execute()[0][\"sample_count\"][\"buckets\"]:\n",
     "    print(\"%s\\t%s\" % (row[\"key\"], row[\"value\"]))"
    ]
   },
@@ -84,42 +115,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-07-26 18:02:37,232\t1 results received in 2 seconds\n"
+      "[INFO]\t2020-01-14 14:26:37,527\t1 results received in 13 seconds\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Program:FM\t18004\n",
-      "Program:TCGA\t11315\n",
-      "Program:TARGET\t3360\n",
-      "Program:CCLE\t1617\n",
-      "Program:GDSC\t1001\n",
-      "Program:CTRP\t886\n",
-      "Program:GTEx\t752\n",
-      "Program:NCICCR\t489\n",
-      "Program:CPTAC\t322\n",
-      "Program:BEATAML1.0\t56\n",
-      "Program:CTSP\t45\n",
-      "Program:HCMI\t7\n",
-      "Program:VAREPOP\t7\n"
+      "Program:GTEx\t204512\n",
+      "Program:TCGA\t33405\n",
+      "Program:CCLE\t1618\n",
+      "Program:GDSC\t1075\n",
+      "Program:CTRP\t887\n"
      ]
     }
    ],
    "source": [
-    "q = O.query().V().hasLabel(\"Program\").as_(\"p\").out(\"projects\").out(\"cases\").select(\"p\")\n",
+    "q = G.query().V().hasLabel(\"Program\").as_(\"p\").out(\"projects\").out(\"cases\").out(\"samples\").select(\"p\")\n",
     "q = q.aggregate(gripql.term(\"sample_count\", \"$._gid\"))\n",
     "for row in q.execute()[0][\"sample_count\"][\"buckets\"]:\n",
     "    print(\"%s\\t%s\" % (row[\"key\"], row[\"value\"]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -138,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
