--- a/AlleleLookup.ipynb
+++ b/AlleleLookup.ipynb
@@ -9,11 +9,12 @@
     "weight: 20\n",
     "authors:\n",
     "- kellrott\n",
+    "- adamstruck\n",
     "tags:\n",
     "- ccle\n",
     "- drug response\n",
     "created_at: 2018-05-09\n",
-    "updated_at: 2018-05-09\n",
+    "updated_at: 2020-01-14\n",
     "tldr: Look up an allele\n",
     "---"
    ]
@@ -27,7 +28,7 @@
     "import hashlib\n",
     "import gripql\n",
     "conn = gripql.Connection(\"https://bmeg.io/api\", credential_file=\"bmeg_credentials.json\")\n",
-    "O = conn.graph(\"bmeg_rc2\")"
+    "G = conn.graph(\"rc5\")"
    ]
   },
   {
@@ -36,11 +37,11 @@
    "source": [
     "BMEG stores alleles using a hashed version of the alteration description\n",
     "```\n",
-    "genome:chromosome:start:end:reference_bases:alternate_bases\n",
+    "genome:chromosome:start:reference_bases:alternate_bases\n",
     "```\n",
     "So an example allele would be:\n",
     "```\n",
-    "GRCh37:1:27100988:27100988:C:T\n",
+    "GRCh37:1:27100988:C:T\n",
     "```\n",
     "Which is then run though a `sha1` hash to get the string\n",
     "```\n",
@@ -50,39 +51,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def allele_gid(genome, chromosome, start, end, reference_bases,\n",
-    "                 alternate_bases):\n",
-    "        vid = \"%s:%s:%d:%d:%s:%s\" % (genome, chromosome,\n",
-    "                                     start, end, reference_bases,\n",
-    "                                     alternate_bases)\n",
-    "        vid = vid.encode('utf-8')\n",
-    "        vidhash = hashlib.sha1()\n",
-    "        vidhash.update(vid)\n",
-    "        vidhash = vidhash.hexdigest()\n",
-    "        return \"Allele:%s\" % (vidhash)"
+    "def allele_gid(genome: str, chromosome: str, start: int,\n",
+    "               reference_bases: str, alternate_bases: str):\n",
+    "\n",
+    "    if not all(v is not None for v in [genome, chromosome, start,\n",
+    "                                       reference_bases, alternate_bases]):\n",
+    "        raise ValueError(\"one or more args was None\")\n",
+    "\n",
+    "    start = int(start)\n",
+    "    if reference_bases == \"-\" or alternate_bases == \"-\":\n",
+    "        pass\n",
+    "    elif reference_bases[0] != alternate_bases[0]:\n",
+    "        pass\n",
+    "    elif len(reference_bases) > len(alternate_bases):\n",
+    "        common = os.path.commonprefix([reference_bases, alternate_bases])\n",
+    "        reference_bases = reference_bases[len(common):]\n",
+    "        if len(alternate_bases) == len(common):\n",
+    "            alternate_bases = \"-\"\n",
+    "        else:\n",
+    "            alternate_bases = alternate_bases[len(common):]\n",
+    "        start += len(common)\n",
+    "    elif len(reference_bases) < len(alternate_bases):\n",
+    "        common = os.path.commonprefix([reference_bases, alternate_bases])\n",
+    "        alternate_bases = alternate_bases[len(common):]\n",
+    "        if len(reference_bases) == len(common):\n",
+    "            reference_bases = \"-\"\n",
+    "        else:\n",
+    "            reference_bases = reference_bases[len(common):]\n",
+    "\n",
+    "    vid = \"{}:{}:{}:{}:{}\".format(genome, chromosome, start, reference_bases, alternate_bases)\n",
+    "    vid = vid.encode('utf-8')\n",
+    "    vidhash = hashlib.sha1()\n",
+    "    vidhash.update(vid)\n",
+    "    vidhash = vidhash.hexdigest()\n",
+    "    return \"Allele:{}\".format(vidhash)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-07-24 17:12:10,693\t1 results received in 0 seconds\n"
+      "[INFO]\t2020-01-14 13:28:17,360\t1 results received in 0 seconds\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<AttrDict({'gid': 'Allele:0b0a7a23d57414e768677a6cbd764563922209df', 'label': 'Allele', 'data': {'alternate_bases': 'T', 'chromosome': '1', 'dbSNP_RS': '.', 'effect': 'Nonsense_Mutation', 'end': 27100988, 'ensembl_transcript': 'ENST00000324856', 'genome': 'GRCh37', 'hugo_symbol': 'ARID1A', 'project_id': 'Project:Reference', 'reference_bases': 'C', 'start': 27100988, 'strand': '+', 'submitter_id': '0b0a7a23d57414e768677a6cbd764563922209df', 'type': 'SNP'}})>\n"
+      "<AttrDict({'gid': 'Allele:a457a505c1551c4dbd936cddb388b021422bc0bc', 'label': 'Allele', 'data': {'all_effects': 'ARID1A,stop_gained,p.Gln1424Ter,ENST00000324856,NM_006015.4;ARID1A,stop_gained,p.Gln1041Ter,ENST00000374152,;ARID1A,stop_gained,p.Gln321Ter,ENST00000430799,;ARID1A,intron_variant,,ENST00000457599,NM_139135.2;ARID1A,intron_variant,,ENST00000540690,;ARID1A,intron_variant,,ENST00000466382,;ARID1A,upstream_gene_variant,,ENST00000532781,;', 'alternate_bases': 'T', 'amino_acids': 'Q/*', 'biotype': 'protein_coding', 'cdna_position': '4641/8577', 'cds_position': '4270/6858', 'chromosome': '1', 'codons': 'Cag/Tag', 'end': 27100988, 'ensembl_gene': 'ENSG00000117713', 'ensembl_protein': 'ENSP00000320485', 'ensembl_transcript': 'ENST00000324856', 'exon_number': '18/20', 'genome': 'GRCh37', 'hgnc_id': '11110', 'hgvsc': 'c.4270C>T', 'hgvsp': 'p.Gln1424Ter', 'hgvsp_short': 'p.Q1424*', 'hugo_symbol': 'ARID1A', 'impact': 'HIGH', 'project_id': 'Project:Reference', 'protein_position': '1424/2285', 'reference_bases': 'C', 'start': 27100988, 'strand': '+', 'submitter_id': None, 'variant_classification': 'Nonsense_Mutation', 'variant_type': 'SNP'}})>\n"
      ]
     }
    ],
@@ -92,8 +117,8 @@
     "ids = []\n",
     "for r in ['A', 'C', 'G', 'T']:\n",
     "    for a in ['A', 'C', 'G', 'T']:\n",
-    "        ids.append( allele_gid(\"GRCh37\", chrom, loc, loc, r, a) )\n",
-    "for row in O.query().V(ids):\n",
+    "        ids.append( allele_gid(\"GRCh37\", chrom, loc, r, a) )\n",
+    "for row in G.query().V(ids):\n",
     "    print( row )"
    ]
   }
@@ -114,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
