--- a/MutationCount.ipynb
+++ b/MutationCount.ipynb
@@ -10,12 +10,13 @@
     "weight: 60\n",
     "authors:\n",
     "- kellrott\n",
+    "- adamstruck\n",
     "tags:\n",
     "- tcga\n",
     "- mutations\n",
     "- mc3\n",
     "created_at: 2018-05-09\n",
-    "updated_at: 2018-05-09\n",
+    "updated_at: 2020-01-14\n",
     "tldr: Find the number of mutations per gene for TCGA cohort\n",
     "---"
    ]
@@ -36,7 +37,7 @@
     "import pandas\n",
     "import gripql\n",
     "conn = gripql.Connection(\"https://bmeg.io/api\", credential_file=\"bmeg_credentials.json\")\n",
-    "O = conn.graph(\"bmeg_rc2\")"
+    "G = conn.graph(\"rc5\")"
    ]
   },
   {
@@ -55,12 +56,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-07-24 17:37:39,468\t1 results received in 1 seconds\n"
+      "[INFO]\t2020-01-14 14:20:35,273\t1 results received in 1 seconds\n"
      ]
     }
    ],
    "source": [
-    "q = O.query().V(\"Project:TCGA-KIRC\")\n",
+    "q = G.query().V(\"Project:TCGA-KIRC\")\n",
     "q = q.out(\"cases\").out(\"samples\").has(gripql.eq(\"gdc_attributes.sample_type\", \"Primary Tumor\"))\n",
     "q = q.out(\"aliquots\").out(\"somatic_callsets\").outE(\"alleles\")\n",
     "q = q.has(gripql.contains(\"methods\", \"MUTECT\"))\n",
@@ -99,14 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO]\t2019-07-24 17:37:39,515\t10 results received in 0 seconds\n"
+      "[INFO]\t2020-01-14 14:20:42,933\t10 results received in 0 seconds\n"
      ]
     },
     {
@@ -127,9 +128,16 @@
     }
    ],
    "source": [
-    "for e,g in O.query().V(goi).render([\"$._gid\" ,\"$.symbol\"]):\n",
+    "for e,g in G.query().V(goi).render([\"$._gid\" ,\"$.symbol\"]):\n",
     "    print(\"%s (%s) = %d\" % (e,g, countDF[e]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -148,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
