fixed typo in SchemaGraph.ipynb

--- a/SchemaGraph.ipynb
+++ b/SchemaGraph.ipynb
@@ -23,19 +23,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The GripQL API allows a user to download the schema of a graph. This outlines the different types of nodes, the edges the connect them and the structure of the documents stored in graph elements. A graph document has a `graph` field that has the name, a `vertices` field and an `edges` field.\n",
-    "\n",
-    "```json\n",
-    "{\"graph': \"rc5\",\n",
-    " \"vertices': [{\"gid\": \"Compound\",\n",
+    "The GripQL API allows a user to download the schema of a graph. This outlines the different types of nodes, the edges the connect them and the structure of the documents stored in graph elements. A graph document has a `graph` field that has the name, a `vertices` field and an `edges` field."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "{\n",
+    " \"graph\": \"rc5\",\n",
+    " \"vertices\": [\n",
+    "   {\"gid\": \"Compound\",\n",
     "   \"label\": \"Compound\",\n",
     "   \"data\": {\"name\": \"STRING\", \"term\": \"STRING\", \"term_id\": \"STRING\"}},\n",
     "  ...],\n",
-    "  \"edges\": [{\"gid\": \"(Project)--program->(Program)\",\n",
-    "   \"label\": \"program\",\n",
-    "   \"from\": \"Project\",\n",
-    "   \"to\": \"Program\",\n",
-    "   \"data\": {}},\n",
+    "  \"edges\": [\n",
+    "    {\"gid\": \"(Project)--program->(Program)\",\n",
+    "     \"label\": \"program\",\n",
+    "     \"from\": \"Project\",\n",
+    "     \"to\": \"Program\",\n",
+    "     \"data\": {}}\n",
+    "   ...]\n",
+    "}\n",
     "```"
    ]
   },
